# ComfyUI-basic_data_handling

./: pyproject.toml
src/basic_data_handling/: boolean_nodes.py  control_flow_nodes.py  data_list_nodes.py  dict_nodes.py
tests/: test_control_flow_nodes.py
